# testcontainers

./: .bazelrc  .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD  BUILD.bazel  README.md  WORKSPACE  cmd.go  go.mod  go.sum  kafka.go  kafka_test.go  log.go  merge.go  mongo.go  mongo_test.go  network.go  options.go  rabbitmq.go  rabbitmq_test.go  tasks.py  testcontainers.go  testcontainers_test.go  utils.go  zookeeper.go  zookeeper_test.go
.github/workflows/: test.yaml
examples/customlogger/: customlogger.go  customlogger_test.go
examples/example1/: example1.go  example1_test.go
examples/kafka/: BUILD.bazel  kafka.go  kafka_example.go  kafka_example_test.go  kafka_test.go
examples/minio/: BUILD.bazel  minio.go  minio_example.go  minio_example_test.go  minio_test.go
examples/mongo/: BUILD.bazel  mongo.go  mongo_example.go  mongo_example_test.go  mongo_test.go
examples/rabbitmq/: BUILD.bazel  rabbitmq.go  rabbitmq_example.go  rabbitmq_example_test.go  rabbitmq_test.go
examples/readme/: BUILD.bazel  readme.go  readme_test.go
examples/redis/: BUILD.bazel  redis.go  redis_example.go  redis_example_test.go  redis_test.go
kafka/: BUILD.bazel  consumer.go  kafka.go  kafka_producer.go  kafka_test.go  producer.go
minio/: BUILD.bazel  minio.go  minio_test.go
mongo/: BUILD.bazel  mongo.go  mongo_test.go
rabbitmq/: BUILD.bazel  consumer.go  producer.go  rabbitmq.go  rabbitmq_test.go
redis/: BUILD.bazel  redis.go  redis_test.go
zookeeper/: BUILD.bazel  zookeeper.go  zookeeper_test.go
