load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "consumer.go",
        "kafka.go",
        "producer.go",
    ],
    importpath = "github.com/romnn/testcontainers/kafka",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//zookeeper:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
        "@com_github_docker_go_connections//nat:go_default_library",
        "@com_github_prometheus_common//log:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["kafka_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
    ],
)
