load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["minio.go"],
    importpath = "github.com/romnnn/testcontainers/minio",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_docker_go_connections//nat:go_default_library",
        "@com_github_romnnn_testcontainers_go//:go_default_library",
        "@com_github_romnnn_testcontainers_go//wait:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["minio_test.go"],
    embed = [":go_default_library"],
    deps = [
        
    ],
)
