load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["redis.go"],
    importpath = "github.com/romnnn/testcontainers/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_docker_go_connections//nat:go_default_library",
        "@com_github_testcontainers_testcontainers_go//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//wait:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["redis_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
