load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["zookeeper.go"],
    importpath = "github.com/romnn/testcontainers/zookeeper",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_docker_go_connections//nat:go_default_library",
        "@com_github_testcontainers_testcontainers_go//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//wait:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["zookeeper_test.go"],
    embed = [":go_default_library"],
)
