load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["kafka_example.go"],
    importpath = "github.com/romnn/testcontainers/examples/kafka",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//kafka:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "kafka",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["kafka_example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
