load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["minio_example.go"],
    importpath = "github.com/romnnn/testcontainers/examples/minio",
    visibility = ["//visibility:private"],
    deps = [
        "//minio:go_default_library",
        "@com_github_minio_minio_go_v7//:go_default_library",
        "@com_github_minio_minio_go_v7//pkg/credentials:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "minio",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["minio_example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
