load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mongo_example.go"],
    importpath = "github.com/romnnn/testcontainers/examples/mongo",
    visibility = ["//visibility:private"],
    deps = [
        "//mongo:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/readpref:go_default_library",
    ],
)

go_binary(
    name = "mongo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["mongo_example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
