load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["rabbitmq_example.go"],
    importpath = "github.com/romnnn/testcontainers/examples/rabbitmq",
    visibility = ["//visibility:private"],
    deps = [
        "//rabbitmq:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "rabbitmq",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["rabbitmq_example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
