load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["redis_example.go"],
    importpath = "github.com/romnn/testcontainers/examples/redis",
    visibility = ["//visibility:private"],
    deps = [
        "//redis:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "redis",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["redis_example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
